feat: rewrite untar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <script src="./dist/fetch.umd.js"></script>
   <script>
-    console.log(1);
+    const { fetchPkg } = FetchNpmPackage;
+    fetchPkg()
   </script>
 </body>
 </html>
