--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src='https://unpkg.com/fetch-npm-package/dist/fetch.umd.js'></script>
   <script>
     const { fetchPackage, fetchFiles, findTarget } = FetchNpmPackage;
-    fetchPackage('@arco-design/web-react').then((result) => {
+    fetchPackage('@arco-design/web-react', { parent: true }).then((result) => {
       console.log(result);
     })
   </script>
