test: add online test code

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div>Please open the console to start the test</div>
-  <!-- <script src='https://unpkg.com/fetch-npm-package/dist/fetch.umd.js'></script> -->
-  <script src="./dist/fetch.umd.js"></script>
+  <script src='https://unpkg.com/fetch-npm-package/dist/fetch.umd.js'></script>
+  <!-- <script src="./dist/fetch.umd.js"></script> -->
   <script>
     const { fetchPackage, fetchFiles, findTarget } = FetchNpmPackage;
     fetchPackage('@arco-design/web-react', { parent: true }).then((result) => {
